[package]
name = "aoc"
version = "0.1.0"
edition = "2021"
authors = ["Anh-Vu Tran <anhvutran1@gmail.com>"]

[[bin]]
name = "aoc2020-05"
path = "src/adventOfCode2020/aoc2020-05.rs"

[[bin]]
name = "aoc2021-01"
path = "src/adventOfCode2021/aoc2021-01.rs"

[[bin]]
name = "aoc2021-02"
path = "src/adventOfCode2021/aoc2021-02.rs"

[dependencies]
