[package]
name = "aoc"
version = "0.1.0"
edition = "2021"
authors = ["Anh-Vu Tran <anhvutran1@gmail.com>"]

[[bin]]
name = "aoc2018-01"
path = "src/2018/aoc2018-01.rs"

[[bin]]
name = "aoc2018-02"
path = "src/2018/aoc2018-02.rs"

[[bin]]
name = "aoc2020-05"
path = "src/2020/aoc2020-05.rs"

[[bin]]
name = "aoc2021-01"
path = "src/2021/aoc2021-01.rs"

[[bin]]
name = "aoc2021-02"
path = "src/2021/aoc2021-02.rs"

[[bin]]
name = "aoc2022-01"
path = "src/2022/aoc2022-01.rs"

[dependencies]
color-eyre = "0.6.2"
itertools = "0.10.5"
